fix(SliderImageGallery,SliderImages): fixed images not resizing to 100% height on mobile

--- a/Components/SliderImageGallery/style.scss
+++ b/Components/SliderImageGallery/style.scss
@@ -33,7 +33,8 @@
     }
 
     .slick-list,
-    .slick-track {
+    .slick-track,
+    .slick-slide > div {
       height: 100%;
     }
 
